Stub in some initial HTML

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,32 @@
-@(message: String)
-
 @main("Swan Audio") {
-
-  Hello World.
-
+<div class="row">
+  <div class="col-md-8">
+    <div class="news-post row">
+      <div class="col-md-12">
+        <h3>News Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+    <div class="news-post row">
+      <div class="col-md-12">
+        <h3>Another News Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <h4>Spotlight</h4>
+    <img src="/assets/images/r1.jpg" alt="Product 1">
+  </div>
+</div>
 }
