--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,9 +1,11 @@
-@main("Swan Audio") {
+@main("Swan Audio", javascript) {
 <div class="row">
-  <div class="col-md-8">
+  <div id="news-feed" class="col-md-8">
+    <script type="text/x-handlebars" data-template-name="index">
+    {{#each}}
     <div class="news-post row">
       <div class="col-md-12">
-        <h3>News Title</h3>
+        <h3>{{title}}</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
@@ -12,17 +14,8 @@
         proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
-    <div class="news-post row">
-      <div class="col-md-12">
-        <h3>Another News Title</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod 
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-    </div>
+    {{/each}}
+    </script>
   </div>
   <div class="col-md-4">
     <h4>Spotlight</h4>
@@ -30,3 +23,8 @@
   </div>
 </div>
 }
+
+@javascript = {
+<script type="text/javascript" src="@routes.Assets.at("javascript/index.js")"></script>
+}
+
