--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, javascript: Html = Html(""))(content: Html)
 
 <!DOCTYPE html>
 
@@ -29,6 +29,8 @@
 </footer>
 </div>
 <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))" type="text/javascript"></script>
-<script src="@routes.WebJarAssets.at(WebJarAssets.locate("ember.min.js"))" type="text/javascript"></script>
+<script src="@routes.WebJarAssets.at(WebJarAssets.locate("handlebars.min.js"))" type="text/javascript"></script>
+<script src="@routes.WebJarAssets.at(WebJarAssets.locate("ember.js"))" type="text/javascript"></script>
+@javascript
 </body>
 </html>
