--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,36 +1,61 @@
 @(title: String, javascript: Html = Html(""))(content: Html)
-
 <!DOCTYPE html>
-
 <html>
 <head>
-  <title>@title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
-  <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
-  <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<title>Swan Audio - @title</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
-  <div class="container">
-    <a href="#" class="navbar-brand">Swan Audio</a>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Login / Register</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-usd"></span>0.00</a></li>
-    </ul>
+<header>
+  <nav class="navbar navbar-default navbar-static-top navbar-inverse" role="navigation">
+    <div class="container">
+      <ul class="nav navbar-nav navbar-left">
+        <li><a href="@routes.Application.index" class="navbar-brand">Swan Audio</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Cables</a></li>
+        <li><a href="#">Pedals</a></li>
+        <li><a href="#">Research</a></li>
+        <li><a href="@routes.Application.contact">About</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Empty</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div id="page-header">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h4>@title</h4>
+        </div>
+        <div class="col-md-6 text-right">
+          <ol class="breadcrumb">
+            <li><a href="#">Home</a></li>
+            <li class="active">Foo</li>
+          </ol>
+        </div>
+      </div>
+    </div>
   </div>
-</nav>
+</header>
+@content
 <div class="container">
-  @content
-<hr>
-<footer class="row small">
-  <div class="col-xs-6 text-left">Copyright &copy; 2014 Swan Audio. All rights reserved.</div>
-  <div class="col-xs-6 text-right"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></div>
-</footer>
+  <hr>
+  <footer class="row small">
+    <div class="col-xs-6 text-left">Copyright &copy; 2014 Swan Audio. All rights reserved.</div>
+    <div class="col-xs-6 text-right"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></div>
+    &nbsp;
+  </footer>
 </div>
 <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))" type="text/javascript"></script>
+<script src="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))" type="text/javascript"></script>
 <script src="@routes.WebJarAssets.at(WebJarAssets.locate("handlebars.min.js"))" type="text/javascript"></script>
 <script src="@routes.WebJarAssets.at(WebJarAssets.locate("ember.js"))" type="text/javascript"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.3.0/holder.js" type="text/javascript"></script>
 @javascript
 </body>
 </html>
