--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -13,8 +13,8 @@
 <section class="container">
   <div class="row">
     <div class="col-md-4">
-      <figure>
-        <img data-src="holder.js/250x250/social/text:Andrew" class="img-responsive">
+      <figure class="center-block">
+        <img data-src="holder.js/600x600/auto/social/text:Andrew" class="img-responsive">
         <figcaption>
         <ul class="social text-right">
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -28,7 +28,7 @@
     </div>
     <div class="col-md-4">
       <figure>
-        <img data-src="holder.js/250x250/vine/text:Alton" class="img-responsive">
+        <img data-src="holder.js/600x600/auto/sky/text:Alton" class="img-responsive center-block">
         <figcaption>
         <ul class="social text-right">
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -36,24 +36,24 @@
         </ul>
         </figcaption>
       </figure>
-      <h2>Alton L</h2>
+      <h2>Alton Liebel</h2>
       <h5>Business Fag</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-    <div class="col-md-4">
-      <figure>
-        <img data-src="holder.js/250x250/lava/text:Evan" class="img-responsive">
-        <figcaption>
-        <ul class="social text-right">
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        </ul>
-        </figcaption>
-      </figure>
-      <h2>Evan Lowry</h2>
-      <h5>Software Engineer</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="col-md-4">
+        <figure>
+          <img data-src="holder.js/600x600/auto/lava/text:Evan" class="img-responsive center-block">
+          <figcaption>
+          <ul class="social text-right">
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          </ul>
+          </figcaption>
+        </figure>
+        <h2>Evan Lowry</h2>
+        <h5>Software Engineer</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 }
