Add some pictures

--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -14,7 +14,7 @@
   <div class="row">
     <div class="col-md-4">
       <figure class="center-block">
-        <img data-src="holder.js/600x600/auto/social/text:Andrew" class="img-responsive">
+        <img src="@routes.Assets.at("images/andrew.jpg")" class="img-responsive center-block">
         <figcaption>
         <ul class="social text-right">
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -23,12 +23,11 @@
         </figcaption>
       </figure>
       <h2>Andrew Swan</h2>
-      <h5>Electrical Engineer</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="col-md-4">
       <figure>
-        <img data-src="holder.js/600x600/auto/sky/text:Alton" class="img-responsive center-block">
+        <img src="@routes.Assets.at("images/alton.jpg")" class="img-responsive center-block">
         <figcaption>
         <ul class="social text-right">
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -37,7 +36,6 @@
         </figcaption>
       </figure>
       <h2>Alton Leibel</h2>
-      <h5>Business Smoke</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
       <div class="col-md-4">
@@ -51,7 +49,6 @@
           </figcaption>
         </figure>
         <h2>Evan Lowry</h2>
-        <h5>Software Engineer</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </div>
