Flip headers around again

--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -43,7 +43,7 @@
           <img data-src="holder.js/600x600/auto/lava/text:Evan" class="img-responsive center-block">
           <figcaption>
           <ul class="social text-right">
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/Lykathia"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
           </ul>
           </figcaption>
