Add some initial mobile support

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -29,7 +29,10 @@
       <ul class="nav navbar-nav navbar-left">
         <li><a href="@routes.Application.index" class="navbar-brand">Swan Audio</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle collapsed" type="button">
+        <i class="fa fa-bars"></i>
+      </button>
+      <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
         <li><a href="#">Cables</a></li>
         <li><a href="#">Pedals</a></li>
         <li><a href="#">Research</a></li>
