Add product controller

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -33,8 +33,7 @@
         <i class="fa fa-bars"></i>
       </button>
       <ul class="nav navbar-nav navbar-right navbar-collapse collapse">
-        <li><a href="#">Cables</a></li>
-        <li><a href="#">Pedals</a></li>
+        <li><a href="@routes.Application.products">Products</a></li>
         <li><a href="#">Research</a></li>
         <li><a href="@routes.Application.contact">About</a></li>
         <li><a href="#">News</a></li>
