--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -15,11 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-right">
-          <ul class="social">
-            <li><a href="https://twitter.com/swanaudio"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="https://github.com/SwanAudio"><i class="fa fa-github"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
+          &nbsp;
         </div>
       </div>
     </div>
@@ -42,16 +38,31 @@
   </nav>
 </header>
 @content
-<div class="container">
-  <hr>
-  <footer class="row small">
-    <div class="col-xs-6 text-left">Copyright &copy; 2014 Swan Audio. All rights reserved.</div>
-    <div class="col-xs-6 text-right"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></div>
-    &nbsp;
-  </footer>
-</div>
+<footer class="footbar">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-6 text-left">
+          <ul class="social">
+            <li><a href="https://twitter.com/swanaudio"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://github.com/SwanAudio"><i class="fa fa-github"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          </ul>
+      </div>
+      <div class="col-xs-6 small text-right">
+        <ul class="list-inline">
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Use</a></li>
+        </ul>
+        Copyright &copy; 2014 Swan Audio. All rights reserved.
+      </div>
+    </div>
+  </div>
+</footer>
 <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))" type="text/javascript"></script>
 <script src="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))" type="text/javascript"></script>
+<script src="@routes.WebJarAssets.at(WebJarAssets.locate("1.3.0-beta.2/angular.min.js"))" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/holder/2.3.0/holder.js" type="text/javascript"></script>
 @javascript
 </body>
