--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -1,2 +1,86 @@
 @main("Products") {
+  <section class="container column-1">
+    <!--
+      Thoughts:
+        Breadcrumb Navigation + dropdown main menu instead of sidebar
+    -->
+    <div class="row">
+      <div class="col-sm-12  hidden-xs">
+
+        <div class="row">
+          <div class="col-md-8">
+            <img data-src="holder.js/800x400/auto/lava/text:Product Picture" class="img-responsive center-block">
+            <ul class="list-inline">
+              <li><img src="holder.js/100x100/auto/text:Image 1" alt="" /></li>
+              <li><img src="holder.js/100x100/auto/text:Image 2" alt="" /></li>
+              <li><img src="holder.js/100x100/auto/text:Image 3" alt="" /></li>
+              <li><img src="holder.js/100x100/auto/text:Image 4" alt="" /></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <table class="table table-striped table-condensed">
+              <thead>
+                <th>Technical Specifications</th>
+                <th></th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Spec</td>
+                  <td>Measure</td>
+                </tr>
+                <tr>
+                  <td>Spec</td>
+                  <td>Measure</td>
+                </tr>
+                <tr>
+                  <td>Spec</td>
+                <td>Measure</td>
+                </tr>
+                <tr>
+                  <td>Spec</td>
+                  <td>Measure</td>
+                </tr>
+              </tbody>
+            </table>
+            <hr>
+            <img data-src="holder.js/200x100/auto/lava/text:Frequency Chart" class="img-responsive center-block">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <hr>
+            <h2>Details</h2>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <hr>
+            <h2>Related</h2>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </div>
+        </div>
+
+        <!-- #################################
+
+          Picture     | Technical Specs
+          (Alt Views) | Graph Printouts
+          -----------------------------
+          Details
+          Features (Bullet Point)
+          ----------------------------
+          Related Research Links
+
+
+          ???
+          Audio clips
+          Youtube videos
+          Social
+          Price
+          Reviews
+          ???
+
+        ################################# -->
+      </div>
+    </div>
+  </section>
+}
+@javascript = {
+<script type="text/javascript" src="@routes.Assets.at("javascript/products.js")"></script>
 }
