--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,8 +31,8 @@ hr {
 /* Generic Styling */
 .minibar {}
 .minibar-dark { background: #353432; border-bottom: 1px solid #7F7D78; }
-
 .navbar-dark { background: #403F3C; border-bottom: 1px solid #E5E1D9;}
+.footbar { background: #353432; border-top: 1px solid #E5E1D9; color: #E5E1D9; padding: 1% 0; margin-top: 1%; }
 
 .column-1 { background: #fff; box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25); padding: 1% 5%; }
 
