--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -1,9 +1,8 @@
 @main("Products") {
+  <nav>
+    NAVIGATION (Breadcrumb? Dropdown?)
+  </nav>
   <section class="container column-1">
-    <!--
-      Thoughts:
-        Breadcrumb Navigation + dropdown main menu instead of sidebar
-    -->
     <div class="row">
       <div class="col-sm-12  hidden-xs">
 
@@ -18,32 +17,76 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <table class="table table-striped table-condensed">
-              <thead>
-                <th>Technical Specifications</th>
-                <th></th>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Spec</td>
-                  <td>Measure</td>
-                </tr>
-                <tr>
-                  <td>Spec</td>
-                  <td>Measure</td>
-                </tr>
-                <tr>
-                  <td>Spec</td>
-                <td>Measure</td>
-                </tr>
-                <tr>
-                  <td>Spec</td>
-                  <td>Measure</td>
-                </tr>
-              </tbody>
-            </table>
+            <h4>Product Name</h4>
+            <!-- Options can vary from product to product -->
+            <form class="form-horizontal" role="form">
+              <div class="form-group">
+                <label for="option1" class="col-md-5 control-label">Cable Length</label>
+                <div class="col-md-7">
+                  <select id="option1" class="form-control">
+                    <option value="">1 meter</option>
+                    <option value="">2 meter</option>
+                    <option value="">3 meter</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="option2" class="col-md-5 control-label">Cable Ends</label>
+                <div class="col-md-7">
+                  <select id="option2" class="form-control">
+                    <option value="">Straight - Straight</option>
+                    <option value="">Straight - Angle</option>
+                    <option value="">Angle - Angle</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-md-5">
+                  Price: $12.34
+                </div>
+                <div class="col-md-7 text-right">
+                  <div class="input-group">
+                    <input type="text" class="form-control" placeholder="1">
+                    <span class="input-group-btn">
+                      <button class="btn btn-primary" type="submit">Add To Cart</button>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </form>
             <hr>
-            <img data-src="holder.js/200x100/auto/lava/text:Frequency Chart" class="img-responsive center-block">
+            <div class="row">
+              <div class="col-md-12">
+              <table class="table table-striped table-condensed">
+                <thead>
+                  <th>Technical Specifications</th>
+                  <th></th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Spec</td>
+                    <td>Measure</td>
+                  </tr>
+                  <tr>
+                    <td>Spec</td>
+                    <td>Measure</td>
+                  </tr>
+                  <tr>
+                    <td>Spec</td>
+                  <td>Measure</td>
+                  </tr>
+                  <tr>
+                    <td>Spec</td>
+                  <td>Measure</td>
+                  </tr>
+                </tbody>
+              </table>
+              <!-- Gain vs Frequency | Phase vs Frequency -->
+              <ul class="list-inline text-center">
+                <li><img data-src="holder.js/150x100/auto/lava/text:Gain vs Frequency" class="img-responsive center-block"></li>
+                <li><img data-src="holder.js/150x100/auto/lava/text:Phase vs Frequency" class="img-responsive center-block"></li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="row">
