--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,6 +1,6 @@
 @(title: String, javascript: Html = Html(""))(content: Html)
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
 <title>Swan Audio - @title</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
