--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -1,128 +1,126 @@
-@main("Products") {
-  <nav>
-    NAVIGATION (Breadcrumb? Dropdown?)
-  </nav>
-  <section ng-controller="img-swap" class="container column-1">
-    <div class="row">
-      <div class="col-sm-12  hidden-xs">
-        <div class="row">
-          <div class="col-md-8">
-            <img ng-src="holder.js/800x400/auto/lava/text:{{activeImage.label}}" data-src="holder.js/800x400/auto/lava/text:Product Picture" class="img-responsive center-block">
-            <ul class="list-inline">
-              <li ng-repeat="img in product.images">
-                <img ng-src="holder.js/100x100/auto/text:{{img.label}}" alt="{{img.alt}}">
-              </li>
-              <!-- Delete next line -->
-              <li><img src="holder.js/100x100/auto/text:Image 4" alt=""></li>
+@main("Products", javascript) {
+<nav>
+  NAVIGATION (Breadcrumb? Dropdown?)
+</nav>
+<section ng-controller="img-swap" class="container column-1">
+  <div class="row">
+    <div class="col-sm-12  hidden-xs">
+      <div class="row">
+        <div class="col-md-8">
+          <img ng-src="holder.js/800x400/auto/lava/text:{{activeImage.label}}" data-src="holder.js/800x400/auto/lava/text:Product Picture" class="img-responsive center-block">
+          <ul class="list-inline">
+            <li ng-repeat="img in images">
+              <img ng-src="holder.js/100x100/auto/text:{{img.label}}" alt="{{img.alt}}">
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h4>Product Name</h4>
+          <!-- Options can vary from product to product -->
+          <form class="form-horizontal" role="form">
+            <div class="form-group">
+              <label for="option1" class="col-md-5 control-label">Cable Length</label>
+              <div class="col-md-7">
+                <select id="option1" class="form-control">
+                  <option value="">1 meter</option>
+                  <option value="">2 meter</option>
+                  <option value="">3 meter</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="option2" class="col-md-5 control-label">Cable Ends</label>
+              <div class="col-md-7">
+                <select id="option2" class="form-control">
+                  <option value="">Straight - Straight</option>
+                  <option value="">Straight - Angle</option>
+                  <option value="">Angle - Angle</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-5">
+                Price: $12.34
+              </div>
+              <div class="col-md-7 text-right">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="1">
+                  <span class="input-group-btn">
+                    <button class="btn btn-primary" type="submit">Add To Cart</button>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </form>
+          <hr>
+          <div class="row">
+            <div class="col-md-12">
+            <table class="table table-striped table-condensed">
+              <thead>
+                <th>Technical Specifications</th>
+                <th></th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Spec</td>
+                  <td>Measure</td>
+                </tr>
+                <tr>
+                  <td>Spec</td>
+                  <td>Measure</td>
+                </tr>
+                <tr>
+                  <td>Spec</td>
+                <td>Measure</td>
+                </tr>
+                <tr>
+                  <td>Spec</td>
+                <td>Measure</td>
+                </tr>
+              </tbody>
+            </table>
+            <!-- Gain vs Frequency | Phase vs Frequency -->
+            <ul class="list-inline text-center">
+              <li><img data-src="holder.js/150x100/auto/lava/text:Gain vs Frequency" class="img-responsive center-block"></li>
+              <li><img data-src="holder.js/150x100/auto/lava/text:Phase vs Frequency" class="img-responsive center-block"></li>
             </ul>
           </div>
-          <div class="col-md-4">
-            <h4>Product Name</h4>
-            <!-- Options can vary from product to product -->
-            <form class="form-horizontal" role="form">
-              <div class="form-group">
-                <label for="option1" class="col-md-5 control-label">Cable Length</label>
-                <div class="col-md-7">
-                  <select id="option1" class="form-control">
-                    <option value="">1 meter</option>
-                    <option value="">2 meter</option>
-                    <option value="">3 meter</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="option2" class="col-md-5 control-label">Cable Ends</label>
-                <div class="col-md-7">
-                  <select id="option2" class="form-control">
-                    <option value="">Straight - Straight</option>
-                    <option value="">Straight - Angle</option>
-                    <option value="">Angle - Angle</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-md-5">
-                  Price: $12.34
-                </div>
-                <div class="col-md-7 text-right">
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="1">
-                    <span class="input-group-btn">
-                      <button class="btn btn-primary" type="submit">Add To Cart</button>
-                    </span>
-                  </div>
-                </div>
-              </div>
-            </form>
-            <hr>
-            <div class="row">
-              <div class="col-md-12">
-              <table class="table table-striped table-condensed">
-                <thead>
-                  <th>Technical Specifications</th>
-                  <th></th>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Spec</td>
-                    <td>Measure</td>
-                  </tr>
-                  <tr>
-                    <td>Spec</td>
-                    <td>Measure</td>
-                  </tr>
-                  <tr>
-                    <td>Spec</td>
-                  <td>Measure</td>
-                  </tr>
-                  <tr>
-                    <td>Spec</td>
-                  <td>Measure</td>
-                  </tr>
-                </tbody>
-              </table>
-              <!-- Gain vs Frequency | Phase vs Frequency -->
-              <ul class="list-inline text-center">
-                <li><img data-src="holder.js/150x100/auto/lava/text:Gain vs Frequency" class="img-responsive center-block"></li>
-                <li><img data-src="holder.js/150x100/auto/lava/text:Phase vs Frequency" class="img-responsive center-block"></li>
-              </ul>
-            </div>
-          </div>
         </div>
-        <div class="row">
-          <div class="col-md-12">
-            <hr>
-            <h2>Details</h2>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            <hr>
-            <h2>Related</h2>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </div>
-        </div>
-
-        <!-- #################################
-
-          Picture     | Technical Specs
-          (Alt Views) | Graph Printouts
-          -----------------------------
-          Details
-          Features (Bullet Point)
-          ----------------------------
-          Related Research Links
-
-
-          ???
-          Audio clips
-          Youtube videos
-          Social
-          Price
-          Reviews
-          ???
-
-        ################################# -->
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <hr>
+          <h2>Details</h2>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <hr>
+          <h2>Related</h2>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+
+      <!-- #################################
+
+        Picture     | Technical Specs
+        (Alt Views) | Graph Printouts
+        -----------------------------
+        Details
+        Features (Bullet Point)
+        ----------------------------
+        Related Research Links
+
+
+        ???
+        Audio clips
+        Youtube videos
+        Social
+        Price
+        Reviews
+        ???
+
+      ################################# -->
     </div>
-  </section>
+  </div>
+</section>
 }
 @javascript = {
 <script type="text/javascript" src="@routes.Assets.at("javascript/products.js")"></script>
