--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -7,15 +7,15 @@
     <div class="col-sm-12  hidden-xs">
       <div class="row">
         <div class="col-md-8">
-          <img ng-src="holder.js/800x400/auto/lava/text:{{activeImage.label}}" data-src="holder.js/800x400/auto/lava/text:Product Picture" class="img-responsive center-block">
+          <img ng-src="{{active_image.url}}" width="680" height="400" class="center-block">
           <ul class="list-inline">
-            <li ng-repeat="img in images">
-              <img ng-src="holder.js/100x100/auto/text:{{img.label}}" alt="{{img.alt}}">
+            <li ng-repeat="img in product.images">
+              <img ng-src="{{img.url}}" ng-click="swap_image(img)" alt="{{img.alt}}" width="100" height="100">
             </li>
           </ul>
         </div>
         <div class="col-md-4">
-          <h4>Product Name</h4>
+          <h4>{{product.name}}</h4>
           <!-- Options can vary from product to product -->
           <form class="form-horizontal" role="form">
             <div class="form-group">
@@ -61,21 +61,9 @@
                 <th></th>
               </thead>
               <tbody>
-                <tr>
+                <tr ng-repeat="i in [1,2,3,4]">
                   <td>Spec</td>
                   <td>Measure</td>
-                </tr>
-                <tr>
-                  <td>Spec</td>
-                  <td>Measure</td>
-                </tr>
-                <tr>
-                  <td>Spec</td>
-                <td>Measure</td>
-                </tr>
-                <tr>
-                  <td>Spec</td>
-                <td>Measure</td>
                 </tr>
               </tbody>
             </table>
@@ -91,7 +79,7 @@
         <div class="col-md-12">
           <hr>
           <h2>Details</h2>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          {{product.details}}
           <hr>
           <h2>Related</h2>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
