Some web updates

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -42,7 +42,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-6 text-left">
-          <ul class="social">
+          <ul class="list-inline">
             <li><a href="https://twitter.com/swanaudio"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://github.com/SwanAudio"><i class="fa fa-github"></i></a></li>
             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
