--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -1,6 +1,7 @@
 @main("About Swan Audio") {
 <section class="container">
   <div class="row column-1">
+    <img data-src="holder.js/2000x500/auto/lava/text:Some Image of Fun Things" class="img-responsive">
     <h1>About</h1>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </div>
@@ -16,7 +17,7 @@
             <figcaption>
             <ul class="social text-right">
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://ca.linkedin.com/in/andrewswan1"><i class="fa fa-linkedin"></i></a></li>
             </ul>
             </figcaption>
           </figure>
@@ -57,8 +58,8 @@
             <img src="@routes.Assets.at("images/evan.png")" class="img-responsive center-block">
             <figcaption>
             <ul class="social text-right">
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://twitter.com/lykathia"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://linkedin.com/in/lykathia"><i class="fa fa-linkedin"></i></a></li>
             </ul>
             </figcaption>
           </figure>
