--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("foo.js")">
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.ico")">
 </head>
