Use svg version of swan audio logo

--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -1,6 +1,6 @@
 <header>
   <a routerLink="/">
-    <img src='assets/swan-audio-logo-final-842x595-png8-weboptimized.png' alt='Swan Audio'>
+    <img src='assets/swan-audio-logo-final.svg' alt='Swan Audio'>
   </a>
   <nav>
     <a routerLink="/services" routerLinkActive="active">Services</a>
@@ -42,6 +42,6 @@
 
     <span>Swan Audio Inc. &copy; 2017</span>
     <!-- replace with just head -->
-    <img src='assets/swan-audio-logo-final-842x595-png8-weboptimized.png' alt='Swan Audio' height='50px'>
+    <img src='assets/swan-audio-logo-final.svg' alt='Swan Audio' height='50px'>
   </div>
 </footer>
