Add quick product icon placeholders for product page

--- a/app/assets/templates/products.html
+++ b/app/assets/templates/products.html
@@ -2,20 +2,14 @@
   <ul>
     <li>
       <a href>
-        <img>
+        <img src='assets/cable-plug.svg'>
         <span>Instrument Cable</span>
       </a>
     </li>
     <li>
       <a href>
-        <img>
+        <img src='assets/cable-xlr.svg'>
         <span>Microphone Cable</span>
-      </a>
-    </li>
-    <li>
-      <a href>
-        <img>
-        <span>Speaker Cable</span>
       </a>
     </li>
   </ul>
