Add facebook social link

--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -10,7 +10,7 @@
   <span class='flex'></span>
   <aside>
     <a target='_blank' href="https://twitter.com/swanaudio"><i class='fa fa-twitter'></i></a>
-    <a target='_blank' href="#"><i class='fa fa-facebook'></i></a>
+    <a target='_blank' href="https://www.facebook.com/swanaudioca"><i class='fa fa-facebook'></i></a>
     <a target='_blank' href="https://www.youtube.com/channel/UCzVBh8sJ172X9HjcWMDyvBQ"><i class='fa fa-youtube'></i></a>
     <a target='_blank' href="https://www.instagram.com/swan.audio"><i class='fa fa-instagram'></i></a>
   </aside>
