Add design stub for product page

--- a/app/assets/stylesheets/main.styl
+++ b/app/assets/stylesheets/main.styl
@@ -45,3 +45,13 @@ swanaudio
 
 .flex
   flex: 1 0 auto
+
+ul.inline-list
+  display: flex
+  list-style-type: none
+  margin: 0
+  padding: 0
+
+  &>li
+    flex: 1 0 auto
+    padding: 0 10px
