--- a/app/assets/stylesheets/swanaudio.styl
+++ b/app/assets/stylesheets/swanaudio.styl
@@ -28,7 +28,7 @@ main
 
   & >>> >*:not(:first-child)
     display: flex
-    flex: 1 0 auto
+    flex: 1 0 0
     flex-direction: column
 
   .hero
@@ -78,13 +78,3 @@ footer
 
       p, ul
         color: font-light-secondary
-
-    &>ul
-      display: flex
-      list-style-type: none
-      margin: 0
-      padding: 0
-
-      &>li
-        flex: 1 0 auto
-        padding: 0 10px
