--- a/app/assets/templates/swanaudio.html
+++ b/app/assets/templates/swanaudio.html
@@ -31,7 +31,7 @@
   <hr>
 
   <div>
-    <ul>
+    <ul class='inline-list'>
       <li><a>Blog</a></li>
       <li><a>Terms</a></li>
       <li><a>Privacy</a></li>
