--- a/app/assets/stylesheets/_colors.styl
+++ b/app/assets/stylesheets/_colors.styl
@@ -13,7 +13,7 @@ accent = #c20430
 border-dark = rgba(0,0,0,.12)
 border-light = rgba(255,255,255,.12)
 
-bg-1 = #fefefe // Regular BG
+bg-1 = #f5f5f5 // Regular BG
 bg-2 = #ffffff // Panel 1
 bg-3 = #e5e5e5 // Panel 2
 bg-4 = #33363a // Super Dark
