Add recent tweet display

--- a/app/assets/templates/recent-tweets.html
+++ b/app/assets/templates/recent-tweets.html
@@ -1,13 +1,8 @@
 <h5>Recent Tweets</h5>
 <ul>
-  <li>
+  <li *ngFor='let tweet of tweets'>
     <div class='tweet'>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </div>
-  </li>
-  <li>
-    <div class='tweet'>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      {{ tweet.text }}
     </div>
   </li>
 </ul>
